--- a/client/right_panel/right_panel_mobile.css
+++ b/client/right_panel/right_panel_mobile.css
@@ -21,13 +21,6 @@
 	align-items: center;
 	justify-content: center;
 	background: rgba(120, 200, 255, 0.1);
-
-}
-
-
-/* Create an active/current tablink class */
-.tab .active {
-	opacity: 1;
 }
 
 /* Style the tab content */
